--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!-- Home Page - Company Overview -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <img src="logo.png" alt="Logo">
+        <nav>
+            <a href="index.html">Home</a>
+            <div class="dropdown">
+                <a class="dropdown-btn" href="services.html">Services</a>
+                <div class="dropdown-content">
+                    <a href="service1.html">Service1</a>
+                    <a href="service2.html">Service2</a>
+                    <a href="service3.html">Service3</a>
+                    <a href="service4.html">Service4</a>
+                </div>
+            </div>
+            <a href="bio.html">Bio</a>
+        </nav>
+    </header>
+
+    <div class="container">
+        <h1>Welcome to Our Company</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
+    </div>
+
+    <footer>
+        &copy; 2025 Your Company. All rights reserved.
+    </footer>
+</body>
+</html>
 
