--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo">
+        <img src="Aline Logo.png" alt="Logo">
         <nav>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <a class="dropdown-btn" href="services.html">Services</a>
                 <div class="dropdown-content">
-                    <a href="service1.html">Service1</a>
-                    <a href="service2.html">Service2</a>
-                    <a href="service3.html">Service3</a>
-                    <a href="service4.html">Service4</a>
+                    <a href="maa.html">Service1</a>
+                    <a href="ppd.html">Service2</a>
+                    <a href="pps.html">Service3</a>
+                    <a href="fsc.html">Service4</a>
                 </div>
             </div>
             <a href="bio.html">Bio</a>
@@ -27,12 +27,12 @@
     </header>
 
     <div class="container">
-        <h1>Welcome to Our Company</h1>
+        <h1>Welcome to Aline Analytics</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
     </div>
 
     <footer>
-        &copy; 2025 Your Company. All rights reserved.
+        &copy; 2025 Aline Analytics. All rights reserved.
     </footer>
 </body>
 </html>
