--- a/services.html
+++ b/services.html
@@ -3,24 +3,24 @@
     <h1>Our Services</h1>
     <div class="services-grid">
         <div class="service-card">
-            <h2>Service1</h2>
+            <h2>Market Alignment Audit</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a class="service-btn" href="service1.html">Learn More</a>
+            <a class="service-btn" href="maa.html">Learn More</a>
         </div>
         <div class="service-card">
-            <h2>Service2</h2>
+            <h2>Performance Pay Design</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a class="service-btn" href="service2.html">Learn More</a>
+            <a class="service-btn" href="ppd.html">Learn More</a>
         </div>
         <div class="service-card">
-            <h2>Service3</h2>
+            <h2>Pay Progression Strategy</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a class="service-btn" href="service3.html">Learn More</a>
+            <a class="service-btn" href="pps.html">Learn More</a>
         </div>
         <div class="service-card">
-            <h2>Service4</h2>
+            <h2>Full Spectrum Compensation</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a class="service-btn" href="service4.html">Learn More</a>
+            <a class="service-btn" href="fsc.html">Learn More</a>
         </div>
     </div>
 </div>
