--- a/index.html
+++ b/index.html
@@ -9,31 +9,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="Aline Logo.png" alt="Logo">
-        <nav>
-            <a href="index.html">Home</a>
-            <div class="dropdown">
-                <a class="dropdown-btn" href="services.html">Services</a>
-                <div class="dropdown-content">
-                    <a href="maa.html">Service1</a>
-                    <a href="ppd.html">Service2</a>
-                    <a href="pps.html">Service3</a>
-                    <a href="fsc.html">Service4</a>
-                </div>
-            </div>
-            <a href="bio.html">Bio</a>
-        </nav>
-    </header>
+    <div id="header"></div>
+    <main class="container">
+        <h1>Compensation Clarity. Strategic Impact.</h1>
+        <p>
+        At Aline Analytics, we transform complex pay data into
+        actionable strategies that attract top talent, reward
+        performance, and drive measurable business results. From
+        market alignment to bonus and raise frameworks, our 
+        tailored solutions give your leadership team the 
+        insights and tools to make confident, equitable, and
+        market-aligned compensation decicisons - without guesswork.
+        <br>
+        <br>
+        Every dollar counts. Every decision matters. With interactive
+        models, executive-ready reports, and expert guidance, we help
+        you optimize compensation programs that retain your best
+        people, inspire high performance, and strengthen your
+        organization's competitive edge.
+        </p>
 
-    <div class="container">
-        <h1>Welcome to Aline Analytics</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
-    </div>
-
-    <footer>
-        &copy; 2025 Aline Analytics. All rights reserved.
-    </footer>
+    </main>
+    <div id="footer"></div>
+    <script src="includes.js"></script>
 </body>
-</html>
-
