--- a/maa.html
+++ b/maa.html
@@ -1,6 +1,53 @@
 <!-- Market Alignment Audit Detail -->
 
-<div class="container">
-    <h1>Market Alignment Audit</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse euismod, nunc sit amet convallis fermentum, sapien massa placerat arcu, non bibendum ex libero in urna.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="header"></div>
+    <main class="container">
+        <h1>Market Alignment Audit</h1>
+        <p>
+            A comprehensive analysis of how your organization's salaries
+            compare to market benchmarks - built to clarify risks,
+            highlight opportunities, and support confident compensation
+            decisions.
+            <br>
+            <br>
+            <h3>How it works:</h3>
+            <ul>
+                <li>Review up to 25 job titles and job descriptions</li>
+                <li>
+                    Identify best-fit market matches using reputable
+                    salary data sources
+                </li>
+                <li>Benchmark current base pay against market percentiles</li>
+                <li>Highlight pay gaps, equity concerns, and compression risks</li>
+            </ul>
+            <br>
+            <br>
+            <h3>What you recieve:</h3>
+            A detailed PDF report that includes:
+            <ul>
+                <li>Executive summary with recommended actions</li>
+                <li>Benchmark tables showing each role's market positioning</li>
+                <li>Visual comparisons of current pay vs. market percentiles</li>
+                <li>Key findings on competitiveness and internal equity</li>
+            </ul>
+            <br>
+            <br>
+            <h3>Pricing:</h3>
+            Projects are billed hourly at $150 per hour.
+            <br>
+            Most audits fall between $1,000 and $2,000, depending
+            on scope and role complexity.
+        </p>
+    </main>
+    <div id="footer"></div>
+    <script src="includes.js"></script>
+</body>
