--- a/pps.html
+++ b/pps.html
@@ -1,6 +1,70 @@
 <!-- Pay Progression Strategy Detail -->
 
-<div class="container">
-    <h1>Pay Progression Strategy</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse euismod, nunc sit amet convallis fermentum, sapien massa placerat arcu, non bibendum ex libero in urna.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="header"></div>
+    <main class="container">
+        <h1>Pay Progression Strategy</h1>
+        <p>
+            A structured, data-driven approach to annual raises that 
+            balances performance, equity, and market competitiveness. 
+            This service combines benchmarking, strategic design, and
+            employee-level modeling to deliver a clear, defensible
+            raise framework that supports retention, strengthens 
+            internal fairness, and aligns compensation decisions
+            with your organization's goals.
+            <br>
+            <br>
+            <h3>How it works:</h3>
+            <ul>
+                <li>
+                    Compare your organization's salaries to market
+                    benchmarks to ground the raise strategy in real
+                    data
+                </li>
+                <li>
+                    Explore multiple raise structure options
+                </li>
+                <li>
+                    Facilitate decision-making with your leadership team
+                </li>
+                <li>
+                    Build the customized raise model and calculate
+                    employee-leve raise outcomes
+                </li>
+            </ul>
+            <br>
+            <br>
+            <h3>What you recieve:</h3>
+            <ul>
+                <li>
+                    Interactive Excel model with raise calculations,
+                    performance tiers, and scenario modeling
+                    functionality.
+                </li>
+                <li>
+                    PDF summary report outlining project scope,
+                    methodology, assumptions, and recommended 
+                    next steps for implementation.
+                </li>
+            </ul>
+            <br>
+            <br>
+            <h3>Pricing:</h3>
+            Projects are billed hourly at $175 per hour.
+            <br>
+            Most audits fall between $1,400 and $2,450, depending
+            on scope and role complexity.
+        </p>
+    </main>
+    <div id="footer"></div>
+    <script src="includes.js"></script>
+</body>
+
