--- a/services.html
+++ b/services.html
@@ -1,26 +1,79 @@
 <!-- Overview of All Services -->
-<div class="container">
-    <h1>Our Services</h1>
-    <div class="services-grid">
-        <div class="service-card">
-            <h2>Market Alignment Audit</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a class="service-btn" href="maa.html">Learn More</a>
-        </div>
-        <div class="service-card">
-            <h2>Performance Pay Design</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a class="service-btn" href="ppd.html">Learn More</a>
-        </div>
-        <div class="service-card">
-            <h2>Pay Progression Strategy</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a class="service-btn" href="pps.html">Learn More</a>
-        </div>
-        <div class="service-card">
-            <h2>Full Spectrum Compensation</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a class="service-btn" href="fsc.html">Learn More</a>
-        </div>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="header"></div>
+    <main class="container">
+        <h1>Our Services</h1>
+        <div class="services-grid">
+            <div class="service-card">
+                <h2>Market Alignment Audit</h2>
+                <p>
+                    Analyze your current compensation practices against
+                    trusted market data to pinpoint gaps, equity issues,
+                    and opportunities to stay competitive.
+                    <br>
+                    <br>
+                    Deliverable: Clear findings and recommendations.
+                    <br>
+                    Cost: $150 per hour
+                </p>
+                <a class="service-btn" href="maa.html">Learn More</a>
+            </div>
+            <div class="service-card">
+                <h2>Performance Pay Design</h2>
+                <p>
+                    Create a bonus structure that motivates the right behaviors
+                    and aligns payouts with results - paired with a calculation model
+                    built specifically for your organization.
+                    <br>
+                    <br>
+                    Includes: A custom interactive bonus tool for ongoing use.
+                    <br>
+                    Cost: $200 per hour
+                </p>
+                <a class="service-btn" href="ppd.html">Learn More</a>
+            </div>
+            <div class="service-card">
+                <h2>Pay Progression Strategy</h2>
+                <p>
+                    Build a fair, defensible raise framework that rewards
+                    performance, supports retention, and keeps salaries
+                    aligned with the market. 
+                    <br>
+                    <br>
+                    Includes: A custom interactive Excel model your team
+                    can use for future raise cycles.
+                    <br>
+                    Cost: $175 per hour
+                </p>
+                <a class="service-btn" href="pps.html">Learn More</a>
+            </div>
+            <div class="service-card">
+                <h2>Full Spectrum Compensation</h2>
+                <p>
+                    A complete compensation system combining Market Alignment,
+                    Pay Progression, and Performance Pay into one integrated 
+                    strategy.
+                    <br>
+                    <br>
+                    Includes: Your full custom compensation model built in
+                    an interactive Excel tool.
+                    <br>
+                    Cost: $325 per hour
+                </p>
+                <a class="service-btn" href="fsc.html">Learn More</a>
+            </div>
+        </main>
     </div>
-</div>
+    <div id="footer"></div>
+    <script src="includes.js"></script>
+</body>
+
