--- a/fsc.html
+++ b/fsc.html
@@ -1,6 +1,69 @@
 <!-- Full Spectrum Compensation Detail -->
 
-<div class="container">
-    <h1>Full Spectrum Compensation</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse euismod, nunc sit amet convallis fermentum, sapien massa placerat arcu, non bibendum ex libero in urna.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="header"></div>
+    <main class="container">
+        <h1>Full Spectrum Compensation</h1>
+        <p>
+            A comprehensive, end-to-end compensation solution combining
+            market alignment, performance pay design, and a data-driven 
+            pay progression strategy. This service brings all three
+            components together into a single, integrated strategy
+            - built to reward performance, strengthen retention, and 
+            keep pay aligned with your organization's goals and the 
+            market. 
+            <br>
+            <br>
+            <h3>How it works:</h3>
+            <ul>
+                <li>
+                    Compare your organization's salaries to market
+                    benchmarks to ground the  compensation in real
+                    data
+                </li>
+                <li>
+                    Explore multiple raise and bonus structure options
+                </li>
+                <li>
+                    Facilitate decision-making with your leadership team
+                </li>
+                <li>
+                    Build the customized raise and bonus model and calculate
+                    employee-level raise and bonus outcomes
+                </li>
+            </ul>
+            <br>
+            <br>
+            <h3>What you recieve:</h3>
+            <ul>
+                <li>
+                    Interactive Excel model with the finalized raise and bonus
+                    design, employee-level calculations, and scenario 
+                    modeling functionality.
+                </li>
+                <li>
+                    PDF summary report outlining project scope,
+                    methodology, assumptions, and recommended 
+                    next steps for implementation.
+                </li>
+            </ul>
+            <br>
+            <br>
+            <h3>Pricing:</h3>
+            Projects are billed hourly at $325 per hour.
+            <br>
+            Most audits fall between $3,250 and $6,500, depending
+            on scope and role complexity.
+        </p>
+    </main>
+    <div id="footer"></div>
+    <script src="includes.js"></script>
+</body>
