--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,42 @@
 <!-- Footer -->
 
+<!-- <footer>
+    <div class="footer-container">
+        <p>Contact: <a href="mailto:allieroth@alineanalytics.com">allieroth@alineanalytics.com</a></p>
+        <p>
+            Connect: 
+            <a href="https://www.linkedin.com/in/allison-roth-ms-4b0728104" target="_blank" rel="noopener noreferrer">
+                LinkedIn
+            </a>
+        </p>
+        <p>&copy; 2025 Aline Analytics. All rights reserved.</p>
+    </div>
+</footer> -->
+
+
+<!-- <footer>
+    <div class="footer-column footer-right">
+        <a href="mailto:allieroth@alineanalytics.com">allieroth@alineanalytics.com</a>
+    </div>
+    <div class="footer-column footer-center">
+        <a href="https://www.linkedin.com/in/allison-roth-ms-4b0728104" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+    </div>
+    <div class="footer-column footer-left">
+        &copy; 2025 Aline Analytics. All rights reserved.
+    </div>
+</footer> -->
+
+
 <footer>
-    &copy; 2025 Aline Analytics. All rights reserved.
+    <div class="footer-top">
+        <div class="footer-left">
+            <a href="mailto:allieroth@alineanalytics.com">allieroth@alineanalytics.com</a>
+        </div>
+        <div class="footer-right">
+            <a href="https://www.linkedin.com/in/allison-roth-ms-4b0728104" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        &copy; 2025 Aline Analytics. All rights reserved.
+    </div>
 </footer>
