--- a/header.html
+++ b/header.html
@@ -1,18 +1,18 @@
 <!-- Header -->
 
 <header>
-    <img src="Aline Logo Transparent Light Color.png" alt="Logo">
+    <img src="/Aline Logo Transparent Light Color.png" alt="Logo">
     <nav>
-        <a href="index.html">Home</a>
+        <a href="/index.html">Home</a>
         <div class="dropdown">
-            <a class="dropdown-btn" href="services.html">Services</a>
+            <a class="dropdown-btn" href="/services/">Services</a>
             <div class="dropdown-content">
-                <a href="maa.html">Market Alignment Audit</a>
-                <a href="ppd.html">Performance Pay Design</a>
-                <a href="pps.html">Pay Progression Strategy</a>
-                <a href="fsc.html">Full Spectrum Compensation</a>
+                <a href="/services/maa/">Market Alignment Audit</a>
+                <a href="/services/ppd/">Performance Pay Design</a>
+                <a href="/services/pps/">Pay Progression Strategy</a>
+                <a href="/services/fsc/">Full Spectrum Compensation</a>
             </div>
         </div>
-        <a href="bio.html">Bio</a>
+        <a href="/about/">About</a>
     </nav>
 </header>
