--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div id="header"></div>
@@ -33,8 +33,15 @@
         <p>
             Connect with me on 
             <a href="https://www.linkedin.com/in/allison-roth-ms-4b0728104" target="_blank">LinkedIn</a>
-            to learn more about my professional experience and projects.</p>
+            to learn more about my professional experience and projects.
+        </p>
+        <p>
+            For consulting inquires or to schedule a conversation about
+            your organization's compensation needs, email me at
+            allieroth@alineanalytics.com. I personally review every
+            message.
+        </p>
     </main>
     <div id="footer"></div>
-    <script src="includes.js"></script>
+    <script src="/includes.js"></script>
 </body>
