--- a/services/ppd/index.html
+++ b/services/ppd/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
     <div id="header"></div>
@@ -63,6 +63,6 @@
         </p>
     </main>
     <div id="footer"></div>
-    <script src="includes.js"></script>
+    <script src="../../includes.js"></script>
 </body>
 
