--- a/services/index.html
+++ b/services/index.html
@@ -25,7 +25,7 @@
                     <br>
                     Cost: $150 per hour
                 </p>
-                <a class="service-btn" href="maa.html">Learn More</a>
+                <a class="service-btn" href="maa/">Learn More</a>
             </div>
             <div class="service-card">
                 <h2>Performance Pay Design</h2>
@@ -39,7 +39,7 @@
                     <br>
                     Cost: $200 per hour
                 </p>
-                <a class="service-btn" href="ppd.html">Learn More</a>
+                <a class="service-btn" href="ppd/">Learn More</a>
             </div>
             <div class="service-card">
                 <h2>Pay Progression Strategy</h2>
@@ -54,7 +54,7 @@
                     <br>
                     Cost: $175 per hour
                 </p>
-                <a class="service-btn" href="pps.html">Learn More</a>
+                <a class="service-btn" href="pps/">Learn More</a>
             </div>
             <div class="service-card">
                 <h2>Full Spectrum Compensation</h2>
@@ -69,7 +69,7 @@
                     <br>
                     Cost: $325 per hour
                 </p>
-                <a class="service-btn" href="fsc.html">Learn More</a>
+                <a class="service-btn" href="fsc/">Learn More</a>
             </div>
         </main>
     </div>
