removed linkedin links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header"></div>
     <main class="container">
-        <h1>Compensation Clarity. Strategic Impact.</h1>
+        <h1 style="text-align: center;">Compensation Clarity. Strategic Impact.</h1>
         <p>
         At Aline Analytics, we transform complex pay data into
         actionable strategies that attract top talent, reward
