--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-<body>
+<!-- <body>
     <div id="header"></div>
     <main class="container">
         <h1 style="text-align: center;">Compensation Clarity. Strategic Impact.</h1>
@@ -32,4 +32,61 @@
     </main>
     <div id="footer"></div>
     <script src="/includes.js"></script>
-</body>
+</body> -->
+
+<section class="hero">
+  <div class="hero-content">
+    <h1>Compensation shouldn’t be a guessing game.</h1>
+    <p class="hero-subhead">
+      Aline Analytics helps growing companies align pay, bonuses, and raises to the market —
+      so you’re not overpaying, underpaying, or losing great people without realizing why.
+    </p>
+    <p class="hero-supporting">
+      Most organizations already spend enough on compensation.
+      We help make sure it’s structured correctly, supports growth,
+      and works as intended.
+    </p>
+  </div>
+</section>
+
+<section class="supporting">
+  <div class="content">
+    <p>
+      We work with small to mid-sized companies (typically 50–200 employees)
+      that are growing, hiring, or navigating change — and want confidence
+      that their compensation decisions are sound.
+    </p>
+
+    <p>
+      Our work focuses on:
+    </p>
+
+    <ul class="service-list">
+      <li>Market-aligned base pay</li>
+      <li>Thoughtful bonus structures</li>
+      <li>Sustainable raise frameworks</li>
+    </ul>
+
+    <p class="emphasis">
+      The goal isn’t to spend more.<br>
+      It’s to spend <strong>intentionally</strong> — retaining talent, managing costs,
+      and avoiding the downstream issues that come from misaligned pay.
+    </p>
+  </div>
+</section>
+
+<section class="value">
+  <div class="content">
+    <p>
+      With clear analyses, executive-ready reporting, and practical guidance,
+      we help leadership teams make compensation decisions they can stand behind —
+      now and as the business evolves.
+    </p>
+  </div>
+</section>
+
+<p class="quiet-note">
+  Compensation decisions affect everything — hiring, retention, morale, and growth.
+  We help make sure they’re working for you, not against you.
+</p>
+
