--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Home</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-<!-- <body>
+<body>
     <div id="header"></div>
-    <main class="container">
+    <!-- <main class="container">
         <h1 style="text-align: center;">Compensation Clarity. Strategic Impact.</h1>
         <p>
         At Aline Analytics, we transform complex pay data into
@@ -29,64 +29,57 @@
         organization's competitive edge.
         </p>
 
+    </main> -->
+    <main class="container">
+        <!-- Hero Section -->
+        <section class="hero">
+            <h1 style="text-align: center;">Compensation shouldn’t be a guessing game.</h1>
+            <p>
+                Aline Analytics helps growing companies align pay, bonuses, and raises to the market — so you’re not overpaying, underpaying, or losing great people without realizing why.
+            </p>
+        </section>
+
+        <!-- Why It Matters -->
+        <section class="why-it-matters">
+            <h2>Why it matters</h2>
+            <p>
+                Most organizations already spend enough on compensation. We help make sure it’s structured correctly, supports growth, and works as intended. Compensation decisions affect everything — hiring, retention, morale, and growth. We make sure they work for you, not against you.
+            </p>
+        </section>
+
+        <!-- Who We Work With -->
+        <section class="who-we-work-with">
+            <h2>Who we work with</h2>
+            <p>
+                We partner with small to mid-sized companies (typically 50–200 employees) that are growing, hiring, or navigating change — and want confidence their compensation decisions are sound.
+            </p>
+        </section>
+
+        <!-- Our Services -->
+        <section class="services">
+            <h2>Our focus areas</h2>
+            <p style="margin-bottom:0.5em;">Our work focuses on:</p>
+            <ul style="margin:0.5em 0 0.5em 20px;">
+                <li>Market-aligned base pay</li>
+                <li>Thoughtful bonus structures</li>
+                <li>Sustainable raise frameworks</li>
+            </ul>
+            <p style="margin-top:0.5em;">
+                The goal isn’t to spend more — it’s to spend <strong>intentionally</strong>: retaining talent, managing costs, and avoiding downstream issues from misaligned pay.
+            </p>
+        </section>
+
+        <!-- How We Help -->
+        <section class="how-we-help">
+            <h2>How we help</h2>
+            <p>
+                With clear analyses, executive-ready reporting, and practical guidance, we help leadership teams make compensation decisions they can stand behind — now and as the business evolves.
+            </p>
+        </section>
+
     </main>
+
     <div id="footer"></div>
     <script src="/includes.js"></script>
-</body> -->
-
-<section class="hero">
-  <div class="hero-content">
-    <h1>Compensation shouldn’t be a guessing game.</h1>
-    <p class="hero-subhead">
-      Aline Analytics helps growing companies align pay, bonuses, and raises to the market —
-      so you’re not overpaying, underpaying, or losing great people without realizing why.
-    </p>
-    <p class="hero-supporting">
-      Most organizations already spend enough on compensation.
-      We help make sure it’s structured correctly, supports growth,
-      and works as intended.
-    </p>
-  </div>
-</section>
-
-<section class="supporting">
-  <div class="content">
-    <p>
-      We work with small to mid-sized companies (typically 50–200 employees)
-      that are growing, hiring, or navigating change — and want confidence
-      that their compensation decisions are sound.
-    </p>
-
-    <p>
-      Our work focuses on:
-    </p>
-
-    <ul class="service-list">
-      <li>Market-aligned base pay</li>
-      <li>Thoughtful bonus structures</li>
-      <li>Sustainable raise frameworks</li>
-    </ul>
-
-    <p class="emphasis">
-      The goal isn’t to spend more.<br>
-      It’s to spend <strong>intentionally</strong> — retaining talent, managing costs,
-      and avoiding the downstream issues that come from misaligned pay.
-    </p>
-  </div>
-</section>
-
-<section class="value">
-  <div class="content">
-    <p>
-      With clear analyses, executive-ready reporting, and practical guidance,
-      we help leadership teams make compensation decisions they can stand behind —
-      now and as the business evolves.
-    </p>
-  </div>
-</section>
-
-<p class="quiet-note">
-  Compensation decisions affect everything — hiring, retention, morale, and growth.
-  We help make sure they’re working for you, not against you.
-</p>
+</body>
 
