--- a/services/ppd/index.html
+++ b/services/ppd/index.html
@@ -14,7 +14,7 @@
         <h1>Performance Pay Design</h1>
         <p>
             A tailored bonus program built to reward high performance,
-            stranthen retention, and reinforce your organization's
+            strengthen retention, and reinforce your organization's
             priorities. This service blends strategy and modeling to 
             deliver a clear, defensible, and data-driven performance
             pay structure. 
