home page and styling updates

--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,4 @@
-<!-- Bio of Me -->
+<!-- Bio of Me
 
 <!DOCTYPE html>
 <html lang="en">
@@ -30,11 +30,6 @@
             challenges, I bring curiosity, rigor, and a modern approach
             to every project.
         </p>
-        <!-- <p>
-            Connect with me on 
-            <a href="https://www.linkedin.com/in/allison-roth-ms-4b0728104" target="_blank">LinkedIn</a>
-            to learn more about my professional experience and projects.
-        </p> -->
         <p>
             For consulting inquires or to schedule a conversation about
             your organization's compensation needs, email me at
@@ -44,4 +39,11 @@
     </main>
     <div id="footer"></div>
     <script src="/includes.js"></script>
-</body>
+</body> -->
+
+<section class="section">
+  <div class="container">
+    <h2>About Aline Analytics</h2>
+    <p>Aline Analytics exists to help companies make smarter, clearer compensation decisions without overcomplication.</p>
+  </div>
+</section>
