--- a/faq/index.html
+++ b/faq/index.html
@@ -1,4 +1,4 @@
-<!-- FAQs -->
+<!-- FAQs
 
 <!DOCTYPE html>
 <html lang="en">
@@ -99,10 +99,10 @@
             Not always. Progression can be implemented through ranges, bands, or skill-based frameworks depending on organizational structure and maturity.
         </p>
 
-        <!-- <h3>How do you prevent pay compression?</h3>
+        <h3>How do you prevent pay compression?</h3>
         <p>
             Progression models are designed to account for range positioning, promotion timing, market movement, and hiring premiums so compression is addressed proactively rather than reactively.
-        </p> -->
+        </p>
 
         <h2>Full Spectrum Compensation</h2>
 
@@ -149,4 +149,13 @@
     <script src="/includes.js"></script>
 
 </body>
-</html>
+</html> -->
+
+<section class="section">
+  <div class="container">
+    <h2>FAQs</h2>
+    <p><strong>Do you replace HR?</strong><br>No — we support leadership and HR with data and structure.</p>
+    <p><strong>Company size?</strong><br>Typically 50–200 employees.</p>
+  </div>
+</section>
+
