--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 
-<footer>
+<!-- <footer>
     <div class="footer-top">
         <div class="footer-bottom">
             <a href="mailto:allieroth@alineanalytics.com">allieroth@alineanalytics.com</a>
@@ -9,4 +9,40 @@
     <div class="footer-bottom">
         &copy; 2025 Aline Analytics. All rights reserved.
     </div>
+</footer> -->
+
+
+<footer>
+  <div class="footer-columns">
+    <div>
+      <h4>Quick Links</h4>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">FAQs</a>
+    </div>
+    <!-- <div>
+      <h4>Resources</h4>
+      <a href="#">Blog</a>
+      <a href="#">FAQs</a>
+      <a href="#">Support</a>
+    </div> -->
+    <div>
+      <h4>Contact Us</h4>
+      <a href="#">Allie Roth</a>
+      <a href="mailto:allieroth@alineanalytics.com">allieroth@alineanalytics.com</a>
+      <div class="social-icons">
+        <a href="https://www.instagram.com/alineanalytics/" target="_blank" class="social-icon">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <!-- <a href="#">&#xf099;</a>
+        <a href="#">&#xf0e1;</a>
+        <a href="#">&#xf16d;</a> -->
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    © 2026 Aline Analytics. All rights reserved.
+  </div>
 </footer>
+
