--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Home Page - Company Overview -->
+<!-- Home Page - Company Overview
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,28 +10,8 @@
 </head>
 <body>
     <div id="header"></div>
-    <!-- <main class="container">
-        <h1 style="text-align: center;">Compensation Clarity. Strategic Impact.</h1>
-        <p>
-        At Aline Analytics, we transform complex pay data into
-        actionable strategies that attract top talent, reward
-        performance, and drive measurable business results. From
-        market alignment to bonus and raise frameworks, our 
-        tailored solutions give your leadership team the 
-        insights and tools to make confident, equitable, and
-        market-aligned compensation decicisons - without guesswork.
-        <br>
-        <br>
-        Every dollar counts. Every decision matters. With interactive
-        models, executive-ready reports, and expert guidance, we help
-        you optimize compensation programs that retain your best
-        people, inspire high performance, and strengthen your
-        organization's competitive edge.
-        </p>
-
-    </main> -->
     <main class="container">
-        <!-- Hero Section -->
+
         <section class="hero">
             <h1 style="text-align: center;">Compensation shouldn’t be a guessing game.</h1>
             <p>
@@ -39,7 +19,6 @@
             </p>
         </section>
 
-        <!-- Why It Matters -->
         <section class="why-it-matters">
             <h2>Why it matters</h2>
             <p>
@@ -47,7 +26,7 @@
             </p>
         </section>
 
-        <!-- Who We Work With -->
+
         <section class="who-we-work-with">
             <h2>Who we work with</h2>
             <p>
@@ -55,7 +34,7 @@
             </p>
         </section>
 
-        <!-- Our Services -->
+
         <section class="services">
             <h2>Our focus areas</h2>
             <p style="margin-bottom:0.5em;">Our work focuses on:</p>
@@ -69,7 +48,7 @@
             </p>
         </section>
 
-        <!-- How We Help -->
+
         <section class="how-we-help">
             <h2>How we help</h2>
             <p>
@@ -81,5 +60,93 @@
 
     <div id="footer"></div>
     <script src="/includes.js"></script>
+</body> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aline Analytics</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+  <div id="header"></div>
+  <main class="container">
+
+    <section class="hero">
+        <div class="hero-text">
+            <h1>Welcome to Aline Analytics</h1>
+            <h3>Compensation shouldn’t be a guessing game.</h3>
+            <p>Aline Analytics helps growing companies align pay, bonuses, and raises to the market — so you’re not overpaying, underpaying, or losing great people without realizing why.</p>
+            <div class="hero-btn">
+                <button class="btn btn-learn">Learn More</button>
+            </div>
+        </div>
+        <div class="hero-img">
+            <img src="/images/laptop-on-desk.png" alt="Laptop on Desk">
+        </div>
+    </section>
+
+    <section class="features">
+        <div class="feature1">
+            <h4>Business Consulting</h4>
+            <p>Expert advice to drive your success.</p>
+        </div>
+        <div class="feature2">
+            <h4>Marketing Solutions</h4>
+            <p>Effective campaigns to reach your audience.</p>
+        </div>
+        <div class="feature1">
+            <h4>Creative Design</h4>
+            <p>Beautiful and functional designs.</p>
+        </div>
+    </section>
+
+    <section class="mid-text">
+        <div class="mid-text-txt">
+            <h2>Grow Your Business With Us</h2>
+            <p>Tailored strategies to achieve your goals.</p>
+        </div>
+    </section>
+
+    <section class="infos">
+        <div class="info2">
+            <h4>Why it matters</h4>
+            <p>Most organizations already spend enough on compensation. We help make sure it’s structured correctly, supports growth, and works as intended. Compensation decisions affect everything — hiring, retention, morale, and growth. We make sure they work for you, not against you.</p>
+        </div>
+        <div class="info1">
+            <h4>Who we work with</h4>
+            <p>We partner with small to mid-sized companies (typically 50–200 employees) that are growing, hiring, or navigating change — and want confidence their compensation decisions are sound.</p>
+        </div>
+        <div class="info2">
+            <h4>How we help</h4>
+            <p>With clear analyses, executive-ready reporting, and practical guidance, we help leadership teams make compensation decisions they can stand behind — now and as the business evolves.</p>
+        </div>
+    </section>
+    <button class="discover-btn">Discover More</button>
+
+    <section class="testimonial-section">
+        <div class="testimonial-header">
+            <h3>Client Testimonials</h3>
+        </div>
+        <section class="testimonials">
+            <div class="testimonial">
+                <img src="https://via.placeholder.com/60" alt="Client Photo">
+                <p>“Working with Your Business has been a game changer for us. Highly professional and dedicated team!” <strong>Sarah M., CEO, Happy Client</strong></p>
+            </div>
+        </section>
+    </section>
+    
+
+  </main>
+
+  <div id="footer"></div>
+  <script src="/includes.js"></script>
+
 </body>
+</html>
 
