--- a/services/fsc/index.html
+++ b/services/fsc/index.html
@@ -1,6 +1,6 @@
 <!-- Full Spectrum Compensation Detail -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,4 +66,7 @@
     </main>
     <div id="footer"></div>
     <script src="../../includes.js"></script>
-</body>
+</body> -->
+
+<h2>Financial Scenario Consulting</h2>
+<p>Model compensation costs before decisions are made.</p>
