--- a/services/index.html
+++ b/services/index.html
@@ -1,6 +1,6 @@
 <!-- Overview of All Services -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -76,4 +76,13 @@
     <div id="footer"></div>
     <script src="../includes.js"></script>
 </body>
+ -->
 
+
+<section class="section">
+  <div class="container card-grid">
+    <a class="card" href="/services/maa/">Market Adjustment Analysis</a>
+    <a class="card" href="/services/ppd/">Pay Program Design</a>
+    <a class="card" href="/services/fsc/">Financial Scenario Consulting</a>
+  </div>
+</section>
