--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 
-<header>
+<!-- <header>
     <img src="/Aline Logo Transparent Light Color.png" alt="Logo">
     <nav>
         <a href="/index.html">Home</a>
@@ -16,4 +16,18 @@
         <a href="/about/">About</a>
         <a href="/faq/">FAQs</a>
     </nav>
-</header>
+</header>-->
+
+
+<header>
+    <div class="logo-img">
+        <img src="/images/Aline Logo Simple Rounded Corners.png" alt="Aline Analytics">
+    </div>
+    <nav>
+      <a href="#" class="active">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">FAQ</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
