--- a/services/maa/index.html
+++ b/services/maa/index.html
@@ -1,6 +1,6 @@
 <!-- Market Alignment Audit Detail -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -50,4 +50,8 @@
     </main>
     <div id="footer"></div>
     <script src="../../includes.js"></script>
-</body>
+</body> -->
+
+
+<h2>Market Adjustment Analysis</h2>
+<p>Ensure base pay aligns with current market realities.</p>
