--- a/services/ppd/index.html
+++ b/services/ppd/index.html
@@ -1,6 +1,6 @@
 <!-- Performance Pay Design Detail -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -65,4 +65,8 @@
     <div id="footer"></div>
     <script src="../../includes.js"></script>
 </body>
+ -->
 
+
+<h2>Pay Program Design</h2>
+<p>Build bonus and raise frameworks that scale.</p>
