--- a/footer.html
+++ b/footer.html
@@ -16,10 +16,10 @@
   <div class="footer-columns">
     <div>
       <h4>Quick Links</h4>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">FAQs</a>
+      <a href="/index.html">Home</a>
+      <a href="/about/index.html">About</a>
+      <a href="/services/index.html">Services</a>
+      <a href="/faq/index.html">FAQs</a>
     </div>
     <!-- <div>
       <h4>Resources</h4>
@@ -29,7 +29,7 @@
     </div> -->
     <div>
       <h4>Contact Us</h4>
-      <a href="#">Allie Roth</a>
+      <p>Allie Roth</p>
       <a href="mailto:allieroth@alineanalytics.com">allieroth@alineanalytics.com</a>
       <div class="social-icons">
         <a href="https://www.instagram.com/alineanalytics/" target="_blank" class="social-icon">
