--- a/header.html
+++ b/header.html
@@ -24,10 +24,18 @@
         <img src="/images/Aline Logo Simple Rounded Corners.png" alt="Aline Analytics">
     </div>
     <nav>
-      <a href="#" class="active">Home</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">FAQ</a>
-      <a href="#">Contact</a>
+      <a href="/index.html">Home</a>
+      <a href="/about/">About</a>
+      <div class="dropdown">
+            <a class="dropdown-btn" href="/services/">Services</a>
+            <div class="dropdown-content">
+                <a href="/services/maa/">Market Alignment Audit</a>
+                <a href="/services/ppd/">Performance Pay Design</a>
+                <a href="/services/pps/">Pay Progression Strategy</a>
+                <a href="/services/fsc/">Full Spectrum Compensation</a>
+            </div>
+        </div>
+      <a href="/faq/">FAQ</a>
+      <a href="/contact/">Contact</a>
     </nav>
   </header>
