--- a/services/fsc/index.html
+++ b/services/fsc/index.html
@@ -68,5 +68,34 @@
     <script src="../../includes.js"></script>
 </body> -->
 
-<h2>Financial Scenario Consulting</h2>
-<p>Model compensation costs before decisions are made.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Financial Scenario Consulting - Aline Analytics Services</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+  <div id="header"></div>
+  <main class="container">
+
+    <section class="section">
+        <div class="container card-grid">
+            <h2>Financial Scenario Consulting</h2>
+            <p>Model compensation costs before decisions are made.</p>
+        </div>
+    </section>
+    
+
+  </main>
+
+  <div id="footer"></div>
+  <script src="/includes.js"></script>
+
+</body>
+</html>
+
+
