--- a/services/index.html
+++ b/services/index.html
@@ -79,10 +79,37 @@
  -->
 
 
-<section class="section">
-  <div class="container card-grid">
-    <a class="card" href="/services/maa/">Market Adjustment Analysis</a>
-    <a class="card" href="/services/ppd/">Pay Program Design</a>
-    <a class="card" href="/services/fsc/">Financial Scenario Consulting</a>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aline Analytics Services</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+  <div id="header"></div>
+  <main class="container">
+
+    <section class="section">
+        <div class="container card-grid">
+            <a class="card" href="/services/maa/">Market Adjustment Analysis</a>
+            <a class="card" href="/services/ppd/">Pay Program Design</a>
+            <a class="card" href="/services/pps/">Pay Progression Strategy</a>
+            <a class="card" href="/services/fsc/">Financial Scenario Consulting</a>
+        </div>
+    </section>
+    
+
+  </main>
+
+  <div id="footer"></div>
+  <script src="/includes.js"></script>
+
+</body>
+</html>
+
+
+
