--- a/services/pps/index.html
+++ b/services/pps/index.html
@@ -1,6 +1,6 @@
 <!-- Pay Progression Strategy Detail -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,5 +66,35 @@
     </main>
     <div id="footer"></div>
     <script src="../../includes.js"></script>
-</body>
+</body> -->
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pay Progression Strategy - Aline Analytics Services</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+  <div id="header"></div>
+  <main class="container">
+
+    <section class="section">
+        <div class="container card-grid">
+            <h2>Pay Progression Strategy</h2>
+            <p>Build raise frameworks that scale.</p>
+        </div>
+    </section>
+    
+
+  </main>
+
+  <div id="footer"></div>
+  <script src="/includes.js"></script>
+
+</body>
+</html>
