--- a/about/index.html
+++ b/about/index.html
@@ -41,9 +41,35 @@
     <script src="/includes.js"></script>
 </body> -->
 
-<section class="section">
-  <div class="container">
-    <h2>About Aline Analytics</h2>
-    <p>Aline Analytics exists to help companies make smarter, clearer compensation decisions without overcomplication.</p>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Aline Analytics</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+  <div id="header"></div>
+  <main class="container">
+
+    <section class="section">
+        <div class="container">
+            <h2>About Aline Analytics</h2>
+            <p>Aline Analytics exists to help companies make smarter, clearer compensation decisions without overcomplication.</p>
+        </div>
+    </section>
+    
+
+  </main>
+
+  <div id="footer"></div>
+  <script src="/includes.js"></script>
+
+</body>
+</html>
+
+
+
