--- a/faq/index.html
+++ b/faq/index.html
@@ -151,11 +151,36 @@
 </body>
 </html> -->
 
-<section class="section">
-  <div class="container">
-    <h2>FAQs</h2>
-    <p><strong>Do you replace HR?</strong><br>No — we support leadership and HR with data and structure.</p>
-    <p><strong>Company size?</strong><br>Typically 50–200 employees.</p>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FAQs Aline Analytics</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+  <div id="header"></div>
+  <main class="container">
+
+    <section class="section">
+        <div class="container">
+            <h2>FAQs</h2>
+            <p><strong>Do you replace HR?</strong><br>No — we support leadership and HR with data and structure.</p>
+            <p><strong>Company size?</strong><br>Typically 50–200 employees.</p>
+        </div>
+    </section>
+    
+
+  </main>
+
+  <div id="footer"></div>
+  <script src="/includes.js"></script>
+
+</body>
+</html>
+
+
 
