--- a/index.html
+++ b/index.html
@@ -1,67 +1,4 @@
-<!-- Home Page - Company Overview
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-<body>
-    <div id="header"></div>
-    <main class="container">
-
-        <section class="hero">
-            <h1 style="text-align: center;">Compensation shouldn’t be a guessing game.</h1>
-            <p>
-                Aline Analytics helps growing companies align pay, bonuses, and raises to the market — so you’re not overpaying, underpaying, or losing great people without realizing why.
-            </p>
-        </section>
-
-        <section class="why-it-matters">
-            <h2>Why it matters</h2>
-            <p>
-                Most organizations already spend enough on compensation. We help make sure it’s structured correctly, supports growth, and works as intended. Compensation decisions affect everything — hiring, retention, morale, and growth. We make sure they work for you, not against you.
-            </p>
-        </section>
-
-
-        <section class="who-we-work-with">
-            <h2>Who we work with</h2>
-            <p>
-                We partner with small to mid-sized companies (typically 50–200 employees) that are growing, hiring, or navigating change — and want confidence their compensation decisions are sound.
-            </p>
-        </section>
-
-
-        <section class="services">
-            <h2>Our focus areas</h2>
-            <p style="margin-bottom:0.5em;">Our work focuses on:</p>
-            <ul style="margin:0.5em 0 0.5em 20px;">
-                <li>Market-aligned base pay</li>
-                <li>Thoughtful bonus structures</li>
-                <li>Sustainable raise frameworks</li>
-            </ul>
-            <p style="margin-top:0.5em;">
-                The goal isn’t to spend more — it’s to spend <strong>intentionally</strong>: retaining talent, managing costs, and avoiding downstream issues from misaligned pay.
-            </p>
-        </section>
-
-
-        <section class="how-we-help">
-            <h2>How we help</h2>
-            <p>
-                With clear analyses, executive-ready reporting, and practical guidance, we help leadership teams make compensation decisions they can stand behind — now and as the business evolves.
-            </p>
-        </section>
-
-    </main>
-
-    <div id="footer"></div>
-    <script src="/includes.js"></script>
-</body> -->
-
+<!-- Home Page -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -83,7 +20,7 @@
             <h3>Compensation shouldn’t be a guessing game.</h3>
             <p>Aline Analytics helps growing companies align pay, bonuses, and raises to the market — so you’re not overpaying, underpaying, or losing great people without realizing why.</p>
             <div class="hero-btn">
-                <button class="btn btn-learn">Learn More</button>
+                <a href="/about/" class="btn btn-learn">Learn More</a>
             </div>
         </div>
         <div class="hero-img">
@@ -92,18 +29,21 @@
     </section>
 
     <section class="features">
-        <div class="feature1">
-            <h4>Business Consulting</h4>
-            <p>Expert advice to drive your success.</p>
-        </div>
-        <div class="feature2">
-            <h4>Marketing Solutions</h4>
-            <p>Effective campaigns to reach your audience.</p>
-        </div>
-        <div class="feature1">
-            <h4>Creative Design</h4>
-            <p>Beautiful and functional designs.</p>
-        </div>
+        <a href="/services/" class="feature feature1">
+            <i class="fa-solid fa-gear"></i>
+            <h4>Our Services</h4>
+            <p>Tailored Solutions That Drive Results</p>
+        </a>
+        <a href="/about/" class="feature feature2">
+            <i class="fa-solid fa-user"></i>
+            <h4>About Us</h4>
+            <p>Your Strategy, Our Expertise</p>
+        </a>
+        <a href="/faq/" class="feature feature1">
+            <i class="fa-solid fa-circle-question"></i>
+            <h4>FAQs</h4>
+            <p>Everything You've Been Wondering About</p>
+        </a>
     </section>
 
     <section class="mid-text">
@@ -115,28 +55,32 @@
 
     <section class="infos">
         <div class="info2">
+            <i class="fa-solid fa-puzzle-piece"></i>
             <h4>Why it matters</h4>
             <p>Most organizations already spend enough on compensation. We help make sure it’s structured correctly, supports growth, and works as intended. Compensation decisions affect everything — hiring, retention, morale, and growth. We make sure they work for you, not against you.</p>
         </div>
         <div class="info1">
+            <i class="fa-solid fa-handshake"></i>
             <h4>Who we work with</h4>
             <p>We partner with small to mid-sized companies (typically 50–200 employees) that are growing, hiring, or navigating change — and want confidence their compensation decisions are sound.</p>
         </div>
         <div class="info2">
+            <i class="fa-solid fa-clipboard-check"></i>
             <h4>How we help</h4>
             <p>With clear analyses, executive-ready reporting, and practical guidance, we help leadership teams make compensation decisions they can stand behind — now and as the business evolves.</p>
         </div>
     </section>
-    <button class="discover-btn">Discover More</button>
 
+    <a href="/services/" class="discover-btn">Discover More</a>
+    
     <section class="testimonial-section">
         <div class="testimonial-header">
             <h3>Client Testimonials</h3>
         </div>
         <section class="testimonials">
             <div class="testimonial">
-                <img src="https://via.placeholder.com/60" alt="Client Photo">
-                <p>“Working with Your Business has been a game changer for us. Highly professional and dedicated team!” <strong>Sarah M., CEO, Happy Client</strong></p>
+                <img src="images/ST logo.png" alt="Client Photo">
+                <p>“Allie Roth of Aline Analytics was instrumental in helping our company design a compensation structure that clearly communicates performance expectations, supports productivity, and recognizes employee contributions. Her professionalism and expertise in compensation analysis and pay structure design enabled us to develop a competitive, sustainable framework aligned with our compensation philosophy. We highly recommend Aline Analytics to any organization seeking to attract and retain top talent.” <strong>Stacy Wingerter, Human Resource Manager, Signal Tech</strong></p>
             </div>
         </section>
     </section>
