--- a/services/maa/index.html
+++ b/services/maa/index.html
@@ -53,5 +53,34 @@
 </body> -->
 
 
-<h2>Market Adjustment Analysis</h2>
-<p>Ensure base pay aligns with current market realities.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Market Adjustment Analysis - Aline Analytics Services</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+  <div id="header"></div>
+  <main class="container">
+
+    <section class="section">
+        <div class="container card-grid">
+            <h2>Market Adjustment Analysis</h2>
+            <p>Ensure base pay aligns with current market realities.</p>
+        </div>
+    </section>
+    
+
+  </main>
+
+  <div id="footer"></div>
+  <script src="/includes.js"></script>
+
+</body>
+</html>
+
+
